selene/tests/validate_config/invalid_fields/rich_output.txt
error: failed to parse toml file `./tests/validate_config/invalid_fields/selene.toml`: invalid type: integer `1`, expected a string
  ┌─ selene.toml:1:7
  │
1 │ std = 1
  │       ^

